# python-project-template

./: .gitignore  .pylintrc  .travis.yml  Jenkins.md  LICENSE  README.md  makefile  requirements.txt  requirements_tests.txt  setup.cfg  setup.py  tox.ini
src/mylib/: __init__.py  deps.py  hello.py  version.py
tests/: test_deps.py  test_hello.py  test_version.py
tests/data/: version.json
tests/data/package1/pack/: __init__.py  analytics.py
tests/data/package1/pack/sub/: __init__.py  absolute.py  relative.py
tests/data/package1/pack/sub/data/: data.json  sample.py
