[metadata]
name = mylib_template
author = Cédric Campguilhem
author_email = cedric.campguilhem@gmail.com
description = A template for Python projects
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/ccampguilhem/python-project-template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers

[options]
zip_safe = False

